--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "aos": "^2.3.4",
-    "next": "10.0.5",
-    "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "next": "^10.0.5",
+    "next-images": "^1.6.2",
+    "next-translate": "^1.0.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   }
 }
